# gea

./: .gitignore  Contributing.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml.disabled
docs/: conf.py
docs/tutorial/: tutorial-ibd.ipynb  tutorial.py
src/gea/: __init__.py  dataloader.py  gea.py  preprocessing.py  utils.py
tests/: test_mockup.py  test_utils.py
