[project]
name = "gea"
version = "0.1.0"
description = "Graph Explainable Attribution for decomposing GNN embeddings with Sparse Autoencoders"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
